자기소개 부분 추가

--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,10 @@
     <h2>자기소개</h2>
     <li>이름 : Ako</li>
     <li>사는 곳 : 위례(하남)</li>
-    <li>안녕하세요 ~~</li>
+    <li>안녕하세요 저는 아코입니다. 저는 어렸을 때 악기를 8년정도 배웠고 배운 이유는 제가 소심한 성격인데 이를 해결해보고자 배웠습니다. 가장 기억에 남은 경험은 독일을 2주간 다녀온 경험이었습니다. 
+        첫 해외여행이기도 했고 홈스테이 및 학교를 참관해본 경험이 있었기 때문입니다. 제가 개발을 처음 시작하게 된 계기는 '마스크 알리미' 서비스가 너무 유용했고 저도 이와 같은 서비스를 만들어 보고자
+        개발 공부를 시작하게 되었습니다.
+    </li>
     <hr>
     <h2>인생 영화 BEST5</h2>
     <table>
